MEB: fix a problem if auth method or auth data is left blank